--- a/force-app/main/default/lwc/modal/modal.html
+++ b/force-app/main/default/lwc/modal/modal.html
@@ -17,12 +17,6 @@
 
       <template if:true={modalHeader}>
         <header class="slds-modal__header" onclick={innerClickHandler}>
-          <button onclick={closeModal} label="slds_button_icon" class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close">
-            <svg class="slds-button__icon slds-button__icon_large" aria-hidden="true" >
-              <use xlink:href="/apexpages/slds/latest/assets/icons/utility-sprite/svg/symbols.svg#close"></use>
-            </svg>
-            <span class="slds-assistive-text">Close</span>
-          </button>
           <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">{modalHeader}</h2>
           <template if:true={modalTagline}>
             <p class="slds-m-top_x-small">{modalTagline}</p>
@@ -33,10 +27,10 @@
         <slot name="modalContent"></slot>
       </div>
       <footer class="slds-modal__footer" onclick={innerClickHandler}>
-        <button class="slds-button slds-button_neutral cancel" onclick={closeModal}>Cancel</button>
         <template if:true={modalSaveHandler}>
-          <button class="slds-button slds-button_brand save" onclick={modalSaveHandler}>Save</button>
-        </template>
+            <button class="slds-button slds-button_brand save slds-float_left" onclick={modalSaveHandler}>Save</button>
+          </template>
+        <button class="slds-button slds-button_neutral cancel slds-float_right" onclick={closeModal}>Cancel</button>
         <a href="javascript:void(0)" class="lastLink"></a>
       </footer>
     </div>
