--- a/force-app/main/default/lwc/exchangeRateNewTradeRecord/exchangeRateNewTradeRecord.html
+++ b/force-app/main/default/lwc/exchangeRateNewTradeRecord/exchangeRateNewTradeRecord.html
@@ -1,6 +1,70 @@
 <template>
-  <c-modal onmodalclose={modalCloseHandler} modal-header="Booked Trades" modal-save-handler={modalSaveHandler}>
-    <p slot="body">This stuff can't be tabbed to when the modal is open</p>
-    <div slot="modalContent" class="modalContent slds-modal__content slds-p-around_medium"></div>
-  </c-modal>
+  <template if:true={isModalOpen}>
+    <section
+      role="dialog"
+      tabindex="-1"
+      aria-labelledby="modal-heading-01"
+      aria-modal="true"
+      aria-describedby="modal-content-id-1"
+      class="slds-modal slds-fade-in-open"
+    >
+      <div class="slds-modal__container" style="min-height: 20em">
+
+        <header class="slds-modal__header">
+          <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close" onclick={closeModal}>
+            <lightning-icon icon-name="utility:close" alternative-text="close" variant="inverse" size="small"></lightning-icon>
+            <span class="slds-assistive-text">Close</span>
+          </button>
+          <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Modal/PopUp Box header LWC</h2>
+        </header>
+
+        <div style="min-height: 30rem" class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+          <lightning-layout vertical-align="stretch">
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+              <div>
+                <lightning-combobox
+                  name="Sell Currency"
+                  label="Sell Currency"
+                  options={sellCurrencyOptions}
+                  onchange={handleSellCurrencyChange}
+                  value={selectedSellCurrency}
+                ></lightning-combobox>
+              </div>
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+              <lightning-combobox
+                name="Buy Currency"
+                label="Buy Currency"
+                options={buyCurrencyOptions}
+                onchange={handleBuyCurrencyChange}
+                value={selectedBuyCurrency}
+              ></lightning-combobox>
+            </lightning-layout-item>
+          </lightning-layout>
+          <lightning-layout>
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+                <lightning-input type="number"
+                label="Sell Amount"
+                required
+                step="0.001">
+</lightning-input>
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+            </lightning-layout-item>
+            <lightning-layout-item size="4" padding="around-small" class="slds-align_absolute-center">
+              </lightning-layout-item>
+          </lightning-layout>
+        </div>
+
+        <footer class="slds-modal__footer">
+          <button class="slds-button slds-button_brand slds-float_left" onclick={submitDetails} title="OK">Create</button>
+          <button class="slds-button slds-button_neutral slds-float_right" onclick={closeModal} title="Cancel">Cancel</button>
+        </footer>
+
+      </div>
+    </section>
+    <div class="slds-backdrop slds-backdrop_open"></div>
+  </template>
 </template>
